# cs5220FinalProject

./: CMakeLists.txt  CPUResults  README.md  Sparse90Results  Sparse99Results  commands.txt  common.h  main.cpp  naive.cpp  sparse.cpp
CPU/: CMakeLists.txt  blas.cpp  common.h  main.cpp  sparse.cpp
CPU-csr-csc/: CMakeLists.txt  blas.cpp  csr_csc.cpp  main.cpp
CPU-csr-csr/: CMakeLists.txt  blas.cpp  csr_csr.cpp  main.cpp
GPU/: CMakeLists.txt  common.h  gpu.cu  main.cu
GPU-csr-csc/: CMakeLists.txt  gpu.cu  main.cu
GPU-csr-csr/: gpu.cu  main.cu  workflow.md
GPU-csr-csr/versions/: time_gpu.cu
GPU/versions/: CMakeLists.txt.consult  CMakeLists.txt.orig  nonzeros_gpu.cu
graphs/: Script.docx  graphs.xlsx
results/: CPUResults  Sparse90Results  Sparse95Results
